@@ -11,6 +11,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   n - change moab_array_compatible server parameter so it defaults to true
   b - fix so comma separated file list can be used with qsub -W stagein/stageout.
       Matches qsub documentation again. (backported from 4.0.1)
+  e - change to allow pbs_mom to run if configured with --enable-nvidia-gpus but
+      installed on a node without Nvidia gpus.
 
 3.0.4
   c - fix a buffer being overrun with nvidia gpus enabled
